<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@drawable/main_background">
    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/main_icon"
            android:layout_gravity="center"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"
            android:layout_gravity="center"/>
    </com.google.android.material.appbar.MaterialToolbar>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/cities_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/cities"
                android:padding="14dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/spinner_background"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/arrow_drop_down"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="@id/cities_spinner"
                app:layout_constraintTop_toTopOf="@id/cities_spinner"
                app:layout_constraintBottom_toBottomOf="@id/cities_spinner"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/info_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/item_background"
                android:padding="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cities_spinner"
                android:visibility="gone">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-light"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/temp_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="18°C"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-light"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/temp"/>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/first_line"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/translucent"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/temp"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/first_line"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/humidity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="65%"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-light"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/humidity"/>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/second_line"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/translucent"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/humidity"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/second_line"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/wind_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="5.7м/с"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-light"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/wind"/>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/third_line"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/translucent"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/wind"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/third_line"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/pressure_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="750мм.рт.ст."
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-light"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/pressure"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <Space
                android:layout_width="0dp"
                android:layout_height="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_layout"
                app:layout_constraintBottom_toTopOf="@id/current_button"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/current_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/current_weather"
                android:fontFamily="sans-serif-light"
                android:textAllCaps="false"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:cornerRadius="8dp"
                android:backgroundTint="@color/orange"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/forecast_button"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/forecast_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/daily_forecast"
                android:fontFamily="sans-serif-light"
                android:textAllCaps="false"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:cornerRadius="8dp"
                android:backgroundTint="@color/orange"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintStart_toEndOf="@id/current_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/error_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/data_loading_error"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-light"
                android:drawableBottom="@drawable/replay"
                android:drawablePadding="8dp"
                android:padding="12dp"
                android:layout_marginStart="34dp"
                android:layout_marginEnd="34dp"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>