<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@drawable/main_background">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:navigationIcon="@drawable/arrow_back">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Санкт-Петербург"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"
            android:layout_gravity="center"/>
    </com.google.android.material.appbar.MaterialToolbar>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon_image_view"
                android:layout_width="70dp"
                android:layout_height="70dp"
                tools:src="@drawable/weather_icon"
                app:layout_constraintStart_toStartOf="@id/temp_text_view"
                app:layout_constraintTop_toTopOf="parent"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/description_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="небольшая облачность"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-light"
                app:layout_constraintStart_toEndOf="@id/icon_image_view"
                app:layout_constraintTop_toTopOf="@id/icon_image_view"
                app:layout_constraintBottom_toBottomOf="@id/icon_image_view"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/temp_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="18°C"
                android:textSize="80sp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-thin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/icon_image_view"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/feels_like_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="ощущается как 16°C"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-light"
                app:layout_constraintTop_toBottomOf="@id/temp_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <LinearLayout
                android:id="@+id/sunrise_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/item_background"
                android:padding="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/sunset_layout"
                app:layout_constraintTop_toBottomOf="@id/feels_like_text_view">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/sunrise"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/sunrise_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="05:00"
                    android:textSize="14sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/sunset_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/item_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toEndOf="@id/sunrise_layout"
                app:layout_constraintEnd_toStartOf="@id/wind_layout"
                app:layout_constraintTop_toBottomOf="@id/feels_like_text_view">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/sunset"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunset"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="4dp"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/sunset_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="21:00"
                    android:textSize="14sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/wind_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:background="@drawable/item_background"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toEndOf="@id/sunset_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/feels_like_text_view">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_view"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/wind"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@id/image_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/wind_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="5.7м/с"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toBottomOf="@id/text_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/deg_image_view"
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_marginStart="4dp"
                    tools:src="@drawable/baseline_south_west"
                    app:layout_constraintStart_toEndOf="@id/wind_text_view"
                    app:layout_constraintTop_toTopOf="@id/wind_text_view"
                    app:layout_constraintBottom_toBottomOf="@id/wind_text_view"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <LinearLayout
                android:id="@+id/pressure_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/item_background"
                android:padding="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/humidity_layout"
                app:layout_constraintTop_toBottomOf="@id/sunset_layout">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/pressure"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/pressure_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="750мм.рт.ст."
                    android:textSize="14sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/humidity_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/item_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/pressure_layout"
                app:layout_constraintEnd_toStartOf="@id/visibility_layout"
                app:layout_constraintTop_toBottomOf="@id/sunset_layout">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@drawable/humidity"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="4dp"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/humidity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:text="65%" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/visibility_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/item_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/humidity_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sunset_layout">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/visibility"
                    android:contentDescription="@string/visibility"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visibility"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="4dp"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/visibility_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="10km"
                    android:textSize="14sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>